--- a/COMP30027_2025_asst1.ipynb
+++ b/COMP30027_2025_asst1.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -660,12 +660,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will first use my current model to predict mu unlabbeled data"
+    "We will use our current supervised model to generate predictions on the unlabelled messages. The `predict_batch` function returns class predictions and confidence scores."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,12 +682,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "split the supervised train into train and validation set"
+    "Split the supervised train into **train** and **validation** set using stratified sampling."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -706,8 +706,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Select 200 Unlabelled Instances using Three Strategies"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -943,54 +950,12 @@
       "18: 25.72\n",
       "code: 25.72\n",
       "won: 24.00\n",
-      "award: 22.29\n",
-      "\n",
-      "Top 10 most predictive words for scam class (P(w|1) / P(w|0)) - Base:\n",
-      "prize: 88.80\n",
-      "tone: 57.46\n",
-      "select: 41.79\n",
-      "claim: 41.21\n",
-      "50: 34.82\n",
-      "paytm: 33.08\n",
-      "code: 31.34\n",
-      "award: 28.73\n",
-      "won: 27.86\n",
-      "18: 26.12\n",
-      "\n",
-      "Top 10 most predictive words for non-malicious class (P(w|0) / P(w|1)) - Base:\n",
-      "gt: 60.30\n",
-      "lt: 59.73\n",
-      "lor: 32.16\n",
-      "ok: 27.57\n",
-      "hope: 27.57\n",
-      "da: 22.40\n",
-      "let: 20.10\n",
-      "wat: 19.53\n",
-      "oh: 18.38\n",
-      "lol: 17.80\n"
+      "award: 22.29\n"
      ]
     }
    ],
    "source": [
-    "#predictive_random0, predictive_random1 = get_predictive_words(like_random, vocab)\n",
     "predictive_lowconf0, predictive_lowconf1 = get_predictive_words(like_expand, vocab_expand)\n",
-    "#predictive_highconf0, predictive_highconf1 = get_predictive_words(like_highconf, vocab)\n",
-    "\n",
-    "# print(\"Top 10 most predictive words for scam class (P(w|1) / P(w|0)):\")\n",
-    "# for word, ratio in top_predictive_1:\n",
-    "#     print(f\"{word}: {ratio:.2f}\")\n",
-    "\n",
-    "# print(\"\\nTop 10 most predictive words for non-malicious class (P(w|0) / P(w|1)):\")\n",
-    "# for word, ratio in top_predictive_0:\n",
-    "#     print(f\"{word}: {ratio:.2f}\")\n",
-    "\n",
-    "# print(\"Top 10 most predictive words for scam class (P(w|1) / P(w|0)) - Random 200:\")\n",
-    "# for word, ratio in predictive_random1:\n",
-    "#     print(f\"{word}: {ratio:.2f}\")\n",
-    "\n",
-    "# print(\"\\nTop 10 most predictive words for non-malicious class (P(w|0) / P(w|1)) - Random 200:\")\n",
-    "# for word, ratio in predictive_random0:\n",
-    "#     print(f\"{word}: {ratio:.2f}\")\n",
     "\n",
     "print(\"\\nTop 10 most predictive words for non-malicious class (P(w|0) / P(w|1)) - Low-Confidence 200:\")\n",
     "for word, ratio in predictive_lowconf1:\n",
@@ -998,21 +963,6 @@
     "\n",
     "print(\"\\nTop 10 most predictive words for scam class (P(w|1) / P(w|0)) - Low-Confidence 200:\")\n",
     "for word, ratio in predictive_lowconf0:\n",
-    "    print(f\"{word}: {ratio:.2f}\")\n",
-    "\n",
-    "# print(\"\\nTop 10 most predictive words for scam class (P(w|1) / P(w|0)) - High-Confidence 200:\")\n",
-    "# for word, ratio in predictive_highconf1:\n",
-    "#     print(f\"{word}: {ratio:.2f}\")\n",
-    "\n",
-    "# print(\"\\nTop 10 most predictive words for non-malicious class (P(w|0) / P(w|1)) - High-Confidence 200:\")\n",
-    "# for word, ratio in predictive_highconf0:\n",
-    "#     print(f\"{word}: {ratio:.2f}\")\n",
-    "\n",
-    "print(\"\\nTop 10 most predictive words for scam class (P(w|1) / P(w|0)) - Base:\")\n",
-    "for word, ratio in top_predictive_1:\n",
-    "    print(f\"{word}: {ratio:.2f}\")\n",
-    "print(\"\\nTop 10 most predictive words for non-malicious class (P(w|0) / P(w|1)) - Base:\")\n",
-    "for word, ratio in top_predictive_0:\n",
     "    print(f\"{word}: {ratio:.2f}\")"
    ]
   }
